--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul id="destinations">
           <li class="destination">
             <img
-              src="images/places/miami.jpg"
+              src="/images/places/miami.jpg"
               alt="Miami streets on sunny day"
             />
             <p>Miami <strong>USA</strong></p>
