--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <ul id="destinations">
           <li class="destination">
             <img
-              src="/images/places/miami.jpg"
+              src="images/places/miami.jpg"
               alt="Miami streets on sunny day"
             />
             <p>Miami <strong>USA</strong></p>
           </li>
           <li class="destination">
             <img
-              src="/images/places/munich.jpg"
+              src="images/places/munich.jpg"
               alt="Munich stadium in winter"
             />
             <p>Munich <strong>Germany</strong></p>
